Raise the z-index of the editor so that it will be in front of content when it is revealed. Fixes #20.

--- a/scribbler/static/scribbler/less/scribbler.less
+++ b/scribbler/static/scribbler/less/scribbler.less
@@ -148,6 +148,7 @@
     bottom: 0;
     width: 100%;
     height: 0;
+    z-index: 10000;
 
     .controls {
         font-family: Helvetica, Arial, sans-serif;
